@@ -1,3 +1,8 @@
+2009-04-20  Rene Schipp von Branitz Nielsen <rbn@vitesse.com>
+
+	* src/am29xxxxx.c: Added set of parentheses around macro
+	parameters used in multiplications. Fixes 16as8 bug.
+
 2008-12-19  Jonathan Larmour  <jifl@eCosCentric.com>
 
 	* cdl/flash_am29xxxxx_v2.cdl: Doh, fix doc link properly.
